ha/node-red/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  selector:
    matchLabels:
      app: node-red
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: node-red
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: node-red
          image: nodered/node-red:4.0.5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
          ports:
            - containerPort: 1880
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: node-red-data
