ha/node-red/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
  selector:
    app: node-red
