ha/node-red/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: node-red.internal.neils.house
      http:
        paths:
          - backend:
              service:
                name: node-red
                port:
                  number: 1880
            path: /
            pathType: Prefix
